Ensure links don't overflow on mobile

--- a/theme/base/stylesheets/front-page/base/_page.sass
+++ b/theme/base/stylesheets/front-page/base/_page.sass
@@ -7,6 +7,7 @@ body
   font-size: $fNormal
   line-height: 20px
   margin: 0
+  overflow-wrap: break-word
 
 *, *:before, *:after
   box-sizing: border-box
